fixed right click menu apearing behind twx components

--- a/ui/monacoScriptEditor/monacoEditor.css
+++ b/ui/monacoScriptEditor/monacoEditor.css
@@ -1,3 +1,11 @@
 .monaco-icon-label {
     margin-left: 20px;
 }
+
+.popover-property>.inline-body {
+    overflow: visible !important;
+}
+
+#twServices td {
+    overflow: visible !important;
+}
